--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>403</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>접근권한없음</h1>
+    <h4>페이지에 접근권한이 없습니다.</h4>
 </body>
 </html>
