--- a/src/main/resources/templates/component/user/signin.html
+++ b/src/main/resources/templates/component/user/signin.html
@@ -8,18 +8,14 @@
             <div class="input-group-prepend">
                 <span class="input-group-text">ID</span>
             </div>
-            <!-- TODO == TEST == -->
-            <!--<input type="text" name="userId" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">-->
-            <input type="text" name="userId" value="admin@kakao.com" class="form-control" placeholder="이메일을 입력해주세요." aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            <input type="text" name="userId" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
 
         <div class="input-group mb-3" style="margin-top: 10px; !important;">
             <div class="input-group-prepend">
                 <span class="input-group-text">PW</span>
             </div>
-            <!-- TODO == TEST == -->
-            <!--<input type="password" name="password" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">-->
-            <input type="password" name="password" value="admin1234" class="form-control" placeholder="비밀번호를 입력해주세요." aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+            <input type="password" name="password" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
         </div>
 
         <div style="margin-top: 10px; !important;">
